// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked-color prop 1`] = `
<div role="radiogroup" class="zv-radio-group">
  <div role="radio" tabindex="0" aria-checked="true" class="zv-radio">
    <div class="zv-radio__icon zv-radio__icon--round zv-radio__icon--checked"><i class="zv-icon zv-icon-success" style="border-color: black; background-color: black;">
        <!----></i></div><span class="zv-radio__label">label</span>
  </div>
  <div role="radio" tabindex="0" aria-checked="true" class="zv-radio">
    <div class="zv-radio__icon zv-radio__icon--round zv-radio__icon--checked"><i class="zv-icon zv-icon-success" style="border-color: white; background-color: white;">
        <!----></i></div><span class="zv-radio__label">label</span>
  </div>
</div>
`;

exports[`icon-size prop 1`] = `
<div role="radiogroup" class="zv-radio-group">
  <div role="radio" tabindex="0" aria-checked="true" class="zv-radio">
    <div class="zv-radio__icon zv-radio__icon--round zv-radio__icon--checked" style="font-size: 10rem;"><i class="zv-icon zv-icon-success">
        <!----></i></div><span class="zv-radio__label">label</span>
  </div>
  <div role="radio" tabindex="0" aria-checked="true" class="zv-radio">
    <div class="zv-radio__icon zv-radio__icon--round zv-radio__icon--checked" style="font-size: 5rem;"><i class="zv-icon zv-icon-success">
        <!----></i></div><span class="zv-radio__label">label</span>
  </div>
</div>
`;
